actually fixed contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ nav a:hover, nav a:focus {
 .skip a {
     position: absolute;
     top: -40px;
+    color: #FFCB05;
 }
 
 *:focus {
